@@ -1,4 +1,6 @@
 Development
+	Add configure option --disable-caching, which never uses local storage for the media cache
+	If cache size from gnome-mplayer is 0, set media to streaming
 	Fix several bugs in dbus event processor
 	Add the ability to set the onClick callback via a javascript method
 0.0.7
